<resources>
    <string name="app_name">ProjetoFinalPart1</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
    <string name="regist">Registo</string>
    <string name="list">Lista</string>
    <string name="map">Mapa</string>
    <string name="dashboard">Página Inicial</string>
    <string name="nomeFilme">Nome do Filme*</string>
    <string name="avaliacao1a10">Pontua o filme de 1 a 10:</string>
    <string name="nomeCinema">Nome do Cinema*</string>
    <string name="dataVisualizacao">Data ex: 01–04-2023</string>
    <string name="tirarFotografias">Adicionar Fotografia</string>
    <string name="observacoes200">Observações (máx. 200 caracteres)</string>
    <string name="registarFilme">Registar Filme</string>
    <string name="erroRegistoFilme">Campo não preenchido</string>
    <string name="nome_do_filme">Nome do Filme</string>
    <string name="nome_do_cinema">Nome do Cinema</string>
    <string name="avalia_o">Avaliação</string>
    <string name="data_de_visualizacao">Data de visualização</string>
    <string name="observaces">Observações</string>
    <string name="novidades">Sugestões</string>
    <string name="nome_filme_detalhes">Nome Filme:</string>
    <string name="nome_cinema_detalhes">Nome Cinema:</string>
    <string name="avaliacao_detalhes">Avaliação:</string>
    <string name="data_de_visualizacao_detalhes">Data de visualização:</string>
    <string name="observaces_detalhes">Observações:</string>
    <string name="genero_detalhes">Género:</string>
    <string name="sinopse_detalhes">Sinopse:</string>
    <string name="data_de_lancamento_detalhes">Data de lançamento:</string>
    <string name="avaliacao_imdb_detalhes">Avaliação IMDB:</string>
    <string name="link_imdb_detalhes">Link IMDB:</string>
    <string name="lista_vazia">Lista vazia</string>
    <string name="mapa">Mapa</string>
    <string name="topFilmes">Top 10 Filmes</string>
    <string name="listaVistos">Lista de filmes vistos</string>
    <string name="paraVer">Para Ver</string>
    <string name="sucesso_registo_filme">Filme registado com sucesso!</string>
    <string name="camposPorPreencher">Existem campos que precisam ser preenchidos</string>
    <string name="filmeNaoExiste">Filme não existe</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionarFoto">Adicionar Foto</string>
    <string name="tirarFoto">Tirar Foto</string>
    <string name="selecionarGaleria">Selecionar da Galeria</string>
    <string name="mensagemRegistado">O filme %1$s já foi registado</string>
    <string name="confirmar">Confirmar</string>
    <string name="mensagemConfirma">Confirma que o nome do filme é %1$s</string>
    <string name="pesquisarFilmeVoz">Indique o filme que quer pesquisar</string>
    <string name="erroVoz">Erro ao reconhecer fala.</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="tentarNovamente">Tentar novamente</string>
    <string name="filme_adicionado_lista_ver">Filme adicionado à lista para ver</string>
    <string name="filme_removido_lista_ver">Filme removido da lista para ver</string>
    <string name="erro_registo_filme">Erro no registro do filme</string>
    <string name="campos_preencher">Por favor, preencha todos os campos obrigatórios</string>
    <string name="confirmacao_adicao_filme">Confirmar adição do filme</string>
    <string name="confirmar_adicionar_filme">Tem a certeza de que deseja adicionar </string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="cinema_nao_existe">Cinema não existe</string>
    <string name="filme_nao_encontrado">Filme não encontrado</string>
    <string name="falar_para_pesquisar_filme">Por favor, fale para pesquisar um filme</string>
    <string name="user_online">Utilizador online</string>
    <string name="atores_detalhes">Atores:</string>
    <string name="duracao_detalhes">Duração:</string>
    <string name="votos_imdb_detalhes">Votos IMDB:</string>
    <string name="filme_adicionado">Filme adicionado</string>
    <string name="filme_existe_bd">Filme já existe na base de dados</string>



</resources>