<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pesquisar"
        android:padding="16dp"
        style="@style/Widget.AppCompat.Button" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentarNovamente"
        android:padding="16dp"
        style="@style/Widget.AppCompat.Button" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:padding="16dp"
        style="@style/Widget.AppCompat.Button" />

</LinearLayout>
